# Hestia-Game-Engine

./: .README.md.swp  .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  engine  makefile
.github/: pull_request_template.md
.github/workflows/: ccpp.yml
assets/shaders/: basicSpriteVertexShader.vs  fragmentShader.fs  lineVertexShader.vs
cmake/: CompilerWarnings.cmake  Conan.cmake  Sanitizers.cmake  StaticAnalyzers.cmake
config/: game.json
depends/: CMakeLists.txt
depends/glad/: CMakeLists.txt
depends/glad/glad/: glad.c
include/: context.h  engine.h
include/camera/: CameraManager.h  camera_manager.h
include/framework/: Engine.h  Engine.hpp  GameEnvironment.h  GameEnvironment.hpp  exceptions.h  game_envrionment.h
include/framework/control/: ControlComponent.hpp  ControlSystem.hpp
include/framework/ecs/: Component.h  Component.hpp  ComponentManager.h  ComponentManager.hpp  ECSFacade.h  GameObject.h  IComponent.h  Object.h  Object.hpp  ObjectManager.h  ObjectManager.hpp  System.h  System.hpp  SystemManager.h  SystemManager.hpp  component.h  component_array.h  component_array_container.h  component_manager.h  ecs.h  ecs_facade.h  game_object.h  object.h  object_manager.h  system.h  system_manager.h
include/framework/ecs/events/: create_object_event.h
include/framework/ecs/interactors/: component_array_interactor.h  component_interactor.h  object_interactor.h
include/framework/events/: Event.h  EventManager.h  EventQueue.h
include/framework/graphics/: GraphicsComponent.hpp  GraphicsSystem.hpp  SpriteComponent.hpp  SpriteSystem.hpp
include/framework/input/: InputComponent.hpp  InputSystem.hpp
include/framework/position/: WorldPositionSystem.h
include/framework/sprite/: SpriteComponent.hpp  SpriteSystem.hpp
include/framework/systems/: CameraSystem.h  ControlSystem.h  ControlSystem.hpp  SpriteSystem.h  SpriteSystem.hpp  TickSystem.h  WorldPositionSystem.h  camera_system.h  control_system.h  debug_system.h  position_system.h  sprite_system.h  tick_system.h
include/framework/tick/: TickComponent.hpp  TickSystem.hpp
include/game/: game_envrionment.h  game_object.h
include/game/systems/: camera_system.h  control_system.h  debug_system.h  position_system.h  sprite_system.h  tick_system.h
include/graphics/: GraphicsModule.h  GraphicsModule.hpp  Material.h  Material.hpp  OpenGlModule.h  OpenGlModule.hpp  Shader.h  Shader.hpp  graphics_module.h  image_loader.h  material.h  opengl_module.h  shader.h  stb_image_loader.h
include/graphics/glad/: glad.h
include/input/: InputManager.h  InputManager.hpp  InputTypes.hpp  input_manager.h  input_types.h
include/maths/: HGEMath.h  HGEMath.hpp  MathsTypes.h  MathsTypes.hpp  maths.h  maths_types.h  rect.h  transform.h  vector.h
include/sample/: SampleComponent.hpp  SampleSystem.hpp  SampleTriangleObject.h  SampleTriangleObject.hpp
include/util/: Logger.h  Logger.hpp  ResourceLoader.h  ResourceLoader.hpp  Uid.h  UidLib.hpp  atomic_queue.h  logger.h  pointer_helper.h  resource_loader.h  uid.h
output/: fragmentShader.fs
src/: CMakeLists.txt  InputController.hpp  main.cpp
src/assets/shaders/: vertexShader.vs
src/control/: ControlSystem.cpp
src/framework/: Engine.cpp  Engine.hpp  GameEnvironment.cpp  GameEnvironment.hpp  InputController.cpp  InputController.hpp  Object.hpp  ObjectController.cpp  ObjectController.hpp
src/framework/components/: Component.hpp  ComponentManager.hpp
src/framework/control/: ControlComponent.cpp  ControlSystem.cpp
src/framework/ecs/: Component.hpp  ComponentManager.hpp  Object.cpp  Object.hpp  ObjectManager.cpp  ObjectManager.hpp  System.hpp  SystemManager.hpp
src/framework/graphics/: GraphicsComponent.cpp  GraphicsComponent.hpp  GraphicsSystem.cpp  GraphicsSystem.hpp  SpriteComponent.cpp  SpriteComponent.hpp  SpriteSystem.cpp  SpriteSystem.hpp
src/framework/input/: InputComponent.cpp  InputSystem.cpp
src/framework/maths/: vectors.hpp
src/framework/objects/: Object.cpp  Object.hpp  ObjectManager.cpp  ObjectManager.hpp
src/framework/sprite/: SpriteComponent.cpp  SpriteSystem.cpp
src/framework/systems/: ControlSystem.cpp  SpriteSystem.cpp  System.hpp  SystemManager.hpp  TickSystem.cpp  control_system.cpp  sprite_system.cpp  tick_system.cpp
src/framework/tick/: TickComponent.cpp  TickComponent.hpp  TickSystem.cpp  TickSystem.hpp
src/glad/: glad.c
src/graphics/: GraphicsComponent.cpp  GraphicsComponent.hpp  GraphicsController.cpp  GraphicsController.hpp  GraphicsModule.hpp  GraphicsSystem.cpp  GraphicsSystem.hpp  OpenGlModule.cpp  OpenGlModule.hpp  Shader.cpp  Viewable.hpp  opengl_module.cpp  shader.cpp  stb_image_loader.cpp
src/graphics/shaders/: Shader.cpp  shader.hpp
src/input/: InputManager.cpp
src/maths/: HGEMath.hpp  MathsTypes.hpp
src/sample/: SampleComponent.cpp  SampleSystem.hpp  SampleTriangleObject.hpp  sampleComponent.hpp
src/util/: Logger.hpp  UidLib.hpp
unit_tests/: CMakeLists.txt  catch_tests_runner.cpp
unit_tests/include/maths/: maths.cpp
unit_tests/src/camera/: camera_manager_tests.cpp
unit_tests/src/maths/: maths.cpp  transform_tests.cpp
